<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_bt_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="serafadam@gmail.com">Adam Serafin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ament_index_cpp</depend>
  <depend>ament_index_python</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>nav2_core</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_example_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
